# hnefatafl

./: Cargo.toml  Rocket.toml
languages/: da.json  de.json  en.json  fo.json  nl.json  no.json
src/: hnefatafl.rs  language.rs  main.rs  websocket_server.rs
static/: main.js  spel.css
templates/: base.html.tera  index.html.tera  spel.html.tera
templates/error/: 404.html.tera
