[package]
name = "hnefatafl"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2021"

[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["tera_templates"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
rand = "0.8"
websocket = "0.26"
rocket-accept-language = "0.7"