[package]
name = "hnefatafl"
version = "0.3.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2021"

[dependencies]
rocket = {version = "0.5", features = ["json"]}
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
rand = "0.8"
rocket-accept-language = "0.8"
rocket_ws = "0.1"
